--- a/tr.html
+++ b/tr.html
@@ -122,7 +122,7 @@ footer a { color: #fff; text-decoration: underline; }
   <div class="container header-inner">
     <div class="logo">
       <a href="https://cratosroyabet870.com/">
-        <img src="cropped-cratosroyalbet.gen_.tr-15.jpg" alt="Cratosroyalbet Logo" width="200" height="49">
+        <img src="https://m.cratosroyalbet-erisim-adres.vip/cropped-cratosroyalbet.gen_.tr-15.jpg" alt="Cratosroyalbet Logo" width="200" height="49">
       </a>
     </div>
     <nav>
@@ -149,7 +149,7 @@ footer a { color: #fff; text-decoration: underline; }
 
     <figure>
       <a href="https://cratosroyabet870.com/" target="_blank" rel="noopener">
-        <img src="cratosroyalbet-giris.jpg" alt="Cratosroyalbet Giriş Adresine Hemen Erişim Sağlayabilirsiniz!" width="300" height="300">
+        <img src="https://m.cratosroyalbet-erisim-adres.vip/cratosroyalbet-giris.jpg" alt="Cratosroyalbet Giriş Adresine Hemen Erişim Sağlayabilirsiniz!" width="300" height="300">
       </a>
       <figcaption>Cratosroyalbet Giriş Adresine Hemen Erişim Sağlayabilirsiniz!</figcaption>
     </figure>
